[gd_scene load_steps=12 format=3 uid="uid://by7yopupguxum"]

[ext_resource type="Script" uid="uid://dt24ick7yy8hh" path="res://Scripts/player.gd" id="1_ksbbd"]
[ext_resource type="PackedScene" uid="uid://bsrym2ob4rqra" path="res://Scenes/hand.tscn" id="2_glx4g"]
[ext_resource type="Script" uid="uid://ckojxqcmxewne" path="res://Scripts/deck.gd" id="3_miouo"]
[ext_resource type="Texture2D" uid="uid://dtr1axxdn8v37" path="res://Assets/CardTextures/Magical Mayhem spell deck back.png" id="4_o3h8g"]
[ext_resource type="Texture2D" uid="uid://b4jkaj23t7eq1" path="res://icon.svg" id="5_1e7my"]
[ext_resource type="PackedScene" uid="uid://5ltupmc1dn21" path="res://Scenes/wizard.tscn" id="6_arntx"]
[ext_resource type="Script" uid="uid://c0n46wp30c8t" path="res://Scripts/nature_container.gd" id="7_lslt6"]
[ext_resource type="Texture2D" uid="uid://b6lsbf5unofnq" path="res://Assets/CardTextures/Hand of Fire.png" id="8_ulo2v"]
[ext_resource type="Texture2D" uid="uid://d1hho1jny2xu6" path="res://Assets/CardTextures/Hand of Water.png" id="9_1iu4k"]
[ext_resource type="Texture2D" uid="uid://cuxgskcus630o" path="res://Assets/CardTextures/Hand of wind.png" id="10_m0x7a"]
[ext_resource type="Texture2D" uid="uid://bok02lqq8ysgf" path="res://Assets/CardTextures/Hand of Earth.png" id="11_5v66d"]

[node name="Player" type="Node2D"]
script = ExtResource("1_ksbbd")
hand_scene = ExtResource("2_glx4g")

[node name="Deck" type="Node2D" parent="."]
position = Vector2(36, 740)
script = ExtResource("3_miouo")

[node name="DeckSprite" type="TextureRect" parent="Deck"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 228.0
offset_bottom = 312.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_o3h8g")
expand_mode = 1

[node name="Poptimer" type="Timer" parent="Deck"]
wait_time = 0.1
one_shot = true

[node name="Discard" type="Node2D" parent="."]
position = Vector2(1656, 740)

[node name="DiscardSprite" type="TextureRect" parent="Discard"]
offset_right = 228.0
offset_bottom = 312.0
texture = ExtResource("5_1e7my")
expand_mode = 1

[node name="PlayCards" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 868.0
offset_top = 515.0
offset_right = 978.0
offset_bottom = 579.0
grow_horizontal = 2
grow_vertical = 2
text = "Play"

[node name="Wizard" parent="." instance=ExtResource("6_arntx")]

[node name="EndTurn" type="Button" parent="."]
offset_left = 984.0
offset_top = 515.0
offset_right = 1104.0
offset_bottom = 579.0
text = "End Turn"

[node name="Label" type="Label" parent="."]
offset_left = 570.0
offset_top = 66.0
offset_right = 882.0
offset_bottom = 153.0
theme_override_font_sizes/font_size = 71
text = "Label 1"

[node name="Label2" type="Label" parent="."]
offset_left = 576.0
offset_top = 176.0
offset_right = 785.0
offset_bottom = 267.0
theme_override_font_sizes/font_size = 66
text = "label 2"

[node name="Natures" type="Node2D" parent="."]
position = Vector2(1560, 152)
script = ExtResource("7_lslt6")

[node name="NatureContainer" type="HBoxContainer" parent="Natures"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -376.0
offset_top = -152.0
offset_right = 356.0
offset_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(366, 133)

[node name="FireContainer" type="VBoxContainer" parent="Natures/NatureContainer"]
layout_mode = 2

[node name="FireTexture" type="TextureRect" parent="Natures/NatureContainer/FireContainer"]
custom_minimum_size = Vector2(180, 240)
layout_mode = 2
texture = ExtResource("8_ulo2v")
expand_mode = 1

[node name="FireLabel" type="Label" parent="Natures/NatureContainer/FireContainer"]
layout_mode = 2

[node name="WaterContainer" type="VBoxContainer" parent="Natures/NatureContainer"]
layout_mode = 2

[node name="WaterTexture" type="TextureRect" parent="Natures/NatureContainer/WaterContainer"]
custom_minimum_size = Vector2(180, 240)
layout_mode = 2
texture = ExtResource("9_1iu4k")
expand_mode = 1

[node name="WaterLabel" type="Label" parent="Natures/NatureContainer/WaterContainer"]
layout_mode = 2

[node name="WindContainer" type="VBoxContainer" parent="Natures/NatureContainer"]
layout_mode = 2

[node name="WindTexture" type="TextureRect" parent="Natures/NatureContainer/WindContainer"]
custom_minimum_size = Vector2(180, 240)
layout_mode = 2
texture = ExtResource("10_m0x7a")
expand_mode = 1

[node name="WindLabel" type="Label" parent="Natures/NatureContainer/WindContainer"]
layout_mode = 2

[node name="EarthContainer" type="VBoxContainer" parent="Natures/NatureContainer"]
layout_mode = 2

[node name="EarthTexture" type="TextureRect" parent="Natures/NatureContainer/EarthContainer"]
custom_minimum_size = Vector2(180, 240)
layout_mode = 2
texture = ExtResource("11_5v66d")
expand_mode = 1

[node name="EarthLabel" type="Label" parent="Natures/NatureContainer/EarthContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="."]
offset_left = 1267.0
offset_top = 319.0
offset_right = 1601.0
offset_bottom = 410.0
theme_override_font_sizes/font_size = 56
text = "ADD NATURES"

[node name="Label3" type="Label" parent="."]
offset_left = 566.0
offset_top = 283.0
offset_right = 786.0
offset_bottom = 380.0
theme_override_font_sizes/font_size = 71
text = "Attack"

[node name="Label4" type="Label" parent="."]
offset_left = 568.0
offset_top = 394.0
offset_right = 767.0
offset_bottom = 478.0
theme_override_font_sizes/font_size = 61
text = "BLOCK"

[connection signal="gui_input" from="Deck/DeckSprite" to="Deck" method="_on_deck_sprite_gui_input"]
[connection signal="mouse_entered" from="Deck/DeckSprite" to="Deck" method="_on_deck_sprite_mouse_entered"]
[connection signal="mouse_exited" from="Deck/DeckSprite" to="Deck" method="_on_deck_sprite_mouse_exited"]
[connection signal="mouse_entered" from="Discard/DiscardSprite" to="Discard" method="_on_discard_sprite_mouse_entered"]
[connection signal="mouse_exited" from="Discard/DiscardSprite" to="Discard" method="_on_discard_sprite_mouse_exited"]
[connection signal="pressed" from="PlayCards" to="." method="_play_card"]
[connection signal="pressed" from="EndTurn" to="." method="_on_end_turn_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
